add: docker compose de Neo4j

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ NEO4J_DATABASE=neo4j
 # Optional: Additional Neo4j configuration
 # NEO4J_TIMEOUT=30
 # NEO4J_MAX_CONNECTION_LIFETIME=3600
+
+# Docker Compose specific Neo4j configuration
+# These are used by docker-compose.yaml when running Neo4j in Docker
+# NEO4J_AUTH=neo4j/your_password_here  # Format: username/password
+# NEO4J_dbms_memory_heap_initial__size=512m
+# NEO4J_dbms_memory_heap_max__size=2G
+# NEO4J_dbms_memory_pagecache_size=1G
