--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "pydantic>=2.5.0",
     "fastapi>=0.104.0",
+    "pydantic-settings>=2.12.0",
 ]
 
 
